# element_weight-retargeting

./: CMakeLists.txt  Installation.md  README.md  Usage.md
.github/workflows/: ci.yml
apps/: CMakeLists.txt  iFeelSuitWeightRetargeting.xml
conf/: CMakeLists.txt  WeightDisplay.ini  WeightRetargetingElbows.ini  WeightRetargetingElbowsOppositeMuscles.ini  WeightRetargetingShoulders.ini  WeightRetargetingShouldersOpposite.ini  WeightRetargeting_iCub3.ini  WeightRetargeting_iCub3_torques.ini
libraries/filters/: CMakeLists.txt
libraries/filters/include/filters/: SecondOrderLowPass.h
libraries/filters/src/: SecondOrderLowPass.cpp
libraries/filters/test/: CMakeLists.txt  matlab.mat  test_second_order_low_pass.cpp
src/: CMakeLists.txt  README.md  WeightDisplayModule.cpp  WeightRetargeting.cpp
src/WeightDisplay/: CMakeLists.txt  README.md
src/WeightDisplay/conf/: WeightDisplay.ini
src/WeightDisplay/src/: WeightDisplayModule.cpp
src/WeightRetargeting/: CMakeLists.txt  README.md
src/WeightRetargeting/conf/: WeightRetargeting_iCub3.ini  WeightRetargeting_iCub3_force.ini
src/WeightRetargeting/include/: ActuatorsGroupFactory.h  CommandGenerator.h  CommandGeneratorFactory.h
src/WeightRetargeting/include/MappingFunctions/: LinearMappingFunction.h  MappingFunction.h  StepMappingFunction.h
src/WeightRetargeting/include/TimePatterns/: ContinuousFeedback.h  PulseFeedback.h  TimePattern.h
src/WeightRetargeting/src/: ActuatorsGroupFactory.cpp  CommandGenerator.cpp  CommandGeneratorFactory.cpp  WeightRetargeting.cpp
src/WeightRetargeting/src/MappingFunctions/: LinearMappingFunction.cpp  MappingFunction.cpp  StepMappingFunction.cpp
src/WeightRetargeting/src/TimePatterns/: ContinuousFeedback.cpp  PulseFeedback.cpp  TimePattern.cpp
src/WeightRetargeting/thrift/: WeightRetargetingService.thrift
src/include/: WeightRetargetingLogComponent.h
src/thrift/: WeightRetargetingService.thrift
